--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -25,7 +25,7 @@
       <!-- bootstrap css -->
       <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
       
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WEHO8swo/2UOjS3jOBMLQzkik9r5CrPmcCeWwVoa8iqh/MRRq80Z4jyfDQo7mZ9G" crossorigin="anonymous">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
       
