--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -11,20 +11,6 @@
          opacity: 1; /* نمایش بنر */
          transform: translateY(0); /* بازگشت به موقعیت */
      }
-
-
-      @media (min-width: 1200px) {
-         .col-lg-3 {
-            max-width: 8%; 
-         }
-      }
-
-      @media (min-width: 768px) and (max-width: 1199px) {
-         .col-md-4 {
-            max-width: 33.33%; /* Show 3 items per slide on medium screens */
-         }
-      }
-
      
 
    </style>
@@ -74,36 +60,20 @@
                      <div class="fashion_section_2">
                         
                         <div class="row">
-                           <div id="shopCarousel" class="carousel slide" data-bs-ride="carousel">
-                              <div class="carousel-inner">
-                                  {% for chunk in shop_list|chunked:4 %} <!-- Default to 4, but JavaScript will handle resizing -->
-                                      <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                          <div class="container">
-                                              <div class="fashion_section_2">
-                                                  <div class="row shop-row">
-                                                      {% for shop in chunk %}
-                                                          <a href="{% url 'storepage' store_name=shop.store_name %}">
-                                                              <div class="col-lg-3 col-md-4 col-sm-6" style="max-width:25%;">
-                                                                  <div class="box-shop">
-                                                                      <div>
-                                                                          <img src="{{ shop.image.url }}" alt="{{ shop.store_name }}">
-                                                                      </div>
-                                                                      <h4 style="font-size:12px; text-align:center; margin-right:0;" class="shirt_text">
-                                                                          {{ shop.store_name }}
-                                                                      </h4>
-                                                                  </div>
-                                                              </div>
-                                                          </a>
-                                                      {% endfor %}
-                                                  </div>
-                                              </div>
-                                          </div>
-                                      </div>
-                                  {% endfor %}
-                              </div>
-                           
-                          </div>
-                          
+                           {%for shop in shop_list%}
+                                         <a  href="{% url 'storepage' store_name=shop.store_name  %}">
+                                             <div class="col-lg-4 col-sm-4" style="max-width:12%;">
+                                                <div class="box-shop">
+                                                   
+                                                   
+                                                   <div ><img  src="{{shop.image.url}}">
+                                                      
+                                                   </div>
+                                                   <h4 style="font-size:12px; text-align:center;  margin-right:0; " class="shirt_text">{{shop.store_name}}</h4>
+                                                </div>
+                                             </div>
+                                          </a>                
+                            {%endfor%}
                            
                            
                         </div>
@@ -115,28 +85,20 @@
                      
                      <div class="fashion_section_2">
                         <div class="row">
-                           <div id="shopCarousel" class="carousel slide" data-bs-ride="carousel">
-                              <div class="carousel-inner">
-                                  {% for shops_chunk in shop_list|chunked:10 %}
-                                      <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                          <div class="d-flex justify-content-center flex-wrap">
-                                              {% for shop in shops_chunk %}
-                                                  <a href="{% url 'storepage' store_name=shop.store_name %}" class="shop-item">
-                                                      <div class="box-shop">
-                                                          <div>
-                                                              <img src="{{ shop.image.url }}" alt="{{ shop.store_name }}" class="shop-image">
-                                                          </div>
-                                                          <h4 class="shop-name">{{ shop.store_name }}</h4>
-                                                      </div>
-                                                  </a>
-                                              {% endfor %}
-                                          </div>
-                                      </div>
-                                  {% endfor %}
-                              </div>
-                             
-                          </div>
-                          
+                           {% for shop in shop_list %}
+                           <a href="{% url 'storepage' store_name=shop.store_name %}">
+                               <div class="col-lg-4 col-sm-4" style="max-width:12%;">
+                                   <div class="box-shop">
+                                       
+                                       <div >
+                                           <img src="{{ shop.image.url }}" alt="{{ shop.store_name }}">
+                                           
+                                       </div>
+                                       <h4 style="font-size:12px; text-align:center; margin-right:0; " class="shirt_text">{{ shop.store_name }}</h4>
+                                   </div>
+                               </div>
+                           </a>
+                       {% endfor %}
                            
                         </div>
                      </div>
@@ -147,32 +109,20 @@
                      
                      <div class="fashion_section_2">
                         <div class="row">
-                            
-                           <div id="shopCarousel" class="carousel slide" data-bs-ride="carousel">
-                              <div class="carousel-inner">
-                                  {% for chunk in shop_list|chunked:4 %}  <!-- Adjust the chunk number to match desktop display count -->
-                                  <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                      <div class="d-flex justify-content-center">
-                                          {% for shop in chunk %}
-                                          <a href="{% url 'storepage' store_name=shop.store_name %}" class="col-lg-3 col-md-4 col-sm-6 col-12">
-                                              <div class="box-shop text-center">
-                                                  <img src="{{ shop.image.url }}" alt="{{ shop.store_name }}" class="img-fluid mb-2" style="width: 100%; height: auto;">
-                                                  <h4 class="shirt_text" style="font-size:12px; text-align:center;">{{ shop.store_name }}</h4>
-                                              </div>
-                                          </a>
-                                          {% endfor %}
-                                      </div>
-                                  </div>
-                                  {% endfor %}
-                              </div>
-                          
-                              <!-- Carousel controls -->
-                          
-                          </div>
-                          
-                             
-                          
-                          
+                           {% for shop in shop_list %}
+                           <a href="{% url 'storepage' store_name=shop.store_name %}">
+                               <div class="col-lg-4 col-sm-4" style="max-width:12%;">
+                                   <div class="box-shop" >
+                                       
+                                       <div>
+                                           <img  src="{{ shop.image.url }}" alt="{{ shop.store_name }}">
+                                           
+                                       </div>
+                                       <h4 style="font-size:12px; text-align:center; margin-right:0; " class="shirt_text">{{ shop.store_name }}</h4>
+                                   </div>
+                               </div>
+                           </a>
+                       {% endfor %}
                            
                         </div>
                      </div>
@@ -266,7 +216,7 @@
                                  <div style="text-align: right;">
                                  <del class="price_del"> <span > {{product.price|custom_price_format }} تومان</span></del>
                                 
-                                 <span class="price_text"> {{ product.final_price|custom_price_format }} تومان <p style="margin: auto; margin-right: 6px; max-width: 20%; background-color:black; border-radius:50%; padding:5px; color:white;">{{product.discount|custom_price_format}}% </p></span>
+                                 <span class="price_text"> {{ product.final_price|custom_price_format }} تومان <p style="background-color:black; border-radius:50%; padding:5px; color:white;">{{product.discount|custom_price_format}}% </p></span>
                                  </div>
                                  {%else%}
                                   <p class="price_text"> <span > {{product.price|custom_price_format }} تومان</span></p>
@@ -293,9 +243,6 @@
          </div>
       </div>
       <!-- jewellery  section end -->
-     
-
-
     <script>
       document.addEventListener("DOMContentLoaded", function() {
          const customBanner = document.getElementById("custom-banner");
@@ -317,18 +264,6 @@
          }, 1000); // Change every 2 seconds
      });
      
-   </script>    
-   <!-- Include Bootstrap JS -->
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"  crossorigin="anonymous"></script>
-<script>
-   document.addEventListener("DOMContentLoaded", function () {
-       var myCarousel = new bootstrap.Carousel(document.getElementById('shopCarousel'), {
-           interval: 3000,  // Set sliding interval (in milliseconds)
-           wrap: true       // Carousel loops back to the beginning
-       });
-   });
-</script>
-
- 
+   </script>     
 {% endblock %}  
 
