--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -59,7 +59,7 @@
                     
                      <div class="fashion_section_2">
                         
-                        <div class="row">
+                        <div class="row" style=" flex-wrap: nowrap;">
                            {%for shop in shop_list%}
                                          <a  href="{% url 'storepage' store_name=shop.store_name  %}">
                                              <div class="col-lg-4 col-sm-4" style="max-width:12%;">
