--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -236,5 +236,6 @@
      });
      
    </script>     
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-JtnY5XkpCpRYqxgQgn79BLSmbBe2BuJg/vIC+a3y7JtNJb9cZW7htv8qK4yAp+9K" crossorigin="anonymous"></script>
 {% endblock %}  
 
