--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -93,12 +93,13 @@
                  </div>
              </div>
      
-             <!-- Add more carousel items as needed for additional sets of shops -->
-     
+             <!-- Add more carousel items as necessary for additional sets of shops -->
+             
          </div>
      
-        
+         
      </div>
+     
      
        <br>
        <br>
