--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -4,6 +4,11 @@
 {% block body %} 
 {% load custom_filters %}
 <head>
+   <!-- Remove Bootstrap CSS -->
+<!-- Keep your selected carousel library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
    <style>
     
      
