--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -231,6 +231,16 @@ window.onload = function() {
 };
 
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16761871821">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16761871821');
+</script>
 
     </body>
 </html>         
