--- a/ui/templates/account-info.html
+++ b/ui/templates/account-info.html
@@ -16,7 +16,7 @@
     <div class="section-title" style="border:1px solid #44334460; border-radius:5px; margin:10px; padding:5%;">
      
         <h2>اطلاعات کاربر</h2>
-        <ul id="outerContainer">
+        <ul id="outerContainer" style="padding-left:0;">
             {% for info in account_info %}
                 <div class="row">
                     <div class="col-lg-6">
