--- a/ui/templates/productedit.html
+++ b/ui/templates/productedit.html
@@ -1,12 +1,12 @@
 {% load static %}
 
 <a class="back-btn" href="#outerContainer"  hx-get="{% url 'edit_product' product_pk=product.pk  %}" hx-target="#outerContainer"><img style="width:20px; height:20px; margin:20px 20px 0 0;" src="{% static 'images/back-icon.png' %}"></a>
-<div class="forms" style="height:auto;">
+<div class="forms" style="height:auto; margin:10px;">
     <legend>انبار کالا</legend>
     {% for form in variation_forms %}
     <div  style="border:solid gray 1px; display:flex; ">
         
-        <form style="display:flex !important;" class="inputs-form" hx-encoding='multipart/form-data' hx-target="#outerContainer" hx-post="{% url 'product_edit' product_pk=product.pk %}" hx-swap="innerHTML" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger='submit' >
+        <form style="display:flex !important;" class="in-form" hx-encoding='multipart/form-data' hx-target="#outerContainer" hx-post="{% url 'product_edit' product_pk=product.pk %}" hx-swap="innerHTML" hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' hx-trigger='submit' >
         {% csrf_token %}
         
         
