--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -15,10 +15,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Inshopping</title>
-      <meta name="keywords" content="">
-      <meta name="description" content="">
-      <meta name="author" content="">
+      <title>Inshopping | این شاپینگ </title>
+      <meta name="description" content="این شاپینگ، پلتفرمی برای معرفی محصولات فروشگاه‌های اینستاگرام با امکان خرید آنلاین و افزایش فروش. با استفاده از اینشاپینگ، فروش خود را افزایش دهید و محصولاتتان را به راحتی به مشتریان معرفی کنید.">
+      <meta name="keywords" content="این شاپینگ">
+      <meta name="author" content="inshopping">
       
       
 
