--- a/ui/templates/signup.html
+++ b/ui/templates/signup.html
@@ -20,7 +20,7 @@
     </head>
     <body style="direction:rtl">
         
-        <section class="container forms"  style="height:100vh;">
+        <section class="container forms"  style="height:100vh;  margin: 0;">
            
             <div class="form login">
                 <div class="form-content">
